[package]
name = "bee-steward-backend"
version = "0.1.0"
authors = ["Kerwin Zhu <pfcoder97@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-cors = "0.3"
actix-files = "0.3"
actix-identity = "0.3"
actix-redis = "0.9"
actix-rt = "1"
actix-service = "1.0.6"
actix-web = "3"
anyhow = "1.0"
argon2rs = "0.2.1"
async-std = { version = "1.8.0", features = [ "attributes" ] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
dotenv = "0.14"
envy = "0.4"
env_logger = "0.8.3"
futures = "0.3.5"
jsonwebtoken = "7"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
num = "0.4.0"
paw = "1.0"
rayon = "1.0"
redis-async = "0.6.3"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
strum = "0.21"
strum_macros = "0.21"
sqlx = { version = "0.5.5", features = [ "mysql", "runtime-async-std-native-tls" ] }
time = "0.2.26"
uuid = { version = "0.7", features = ["serde", "v4"] }
validator = "0.12.0"
validator_derive = "0.12.0"
walkdir = "2"

[dev-dependencies]
actix-http-test = "0.2.0"

[features]
cockroach = []
mysql = []
default = ["mysql"]